@@ -99,3 +99,5 @@
 #undef SUPPORTS_ALIGNED_ATTRIBUTE
 
 #undef SUPPORTS_TREE_VECTORIZE
+
+#undef USE_MMAP_MAP_STACK
